--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CREDENCE</string>
+    <string name="web_client_id">475826142271-2lklovbh35r2v9kegm27rsafom3d76k7.apps.googleusercontent.com</string>
 </resources>
